--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
-    "name": "hootlex/laravel-friendships",
-    "description": "This package gives Eloquent models the ability to manage their friendships.",
+    "name": "TreliaGT/laravel-friendships",
+    "description": "This package gives Eloquent models the ability to manage their friendships. forged from https://github.com/hootlex/laravel-friendships",
     "keywords": ["laravel", "friendships", "friend-system", "friends", "eloquent"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Hootlex",
-            "email": "hootlex@icloud.com"
+            "name": "TreliaGT"
         }
     ],
     "autoload-dev": {
