--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
     "description": "This package gives Eloquent models the ability to manage their friendships.",
     "keywords": ["laravel", "friendships", "friend-system", "friends", "eloquent"],
     "license": "MIT",
+     "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/TreliaGT/laravel-friendships"
+        }
+    ],
     "authors": [
         {
             "name": "Hootlex",
